--- a/index.html
+++ b/index.html
@@ -56,53 +56,39 @@
       <section>
         <h2>Материалы</h2>
         <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Материалы">
-        <form action="#" method="get">
-          <button>На любой вкус</button>
-        </form>
+        <a href="#">На любой вкус</a>
       </section>
       <section>
         <h2>Инструмент</h2>
         <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Инструмент">
-        <form action="#" method="get">
-          <button>На все случаи</button>
-        </form>
+        <a href="#">На все случаи</a>
       </section>
       <section>
         <h2>Техника</h2>
         <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Техника">
-        <form action="#" method="get">
-          <button>Для стройки</button>
-        </form>
+        <a href="#">Для стройки</a>
       </section>
       <section>
         <h2>Дрели</h2>
         <p>Соседям на радость</p>
         <img src="https://via.placeholder.com/620x266" width="620" height="266" alt="Дрели">
-        <form action="catalog.html" method="get">
-          <button>Открыть каталог</button>
-        </form>
+        <a href="catalog.html">Открыть каталог</a>
         <button type="button" name="left-slide">&lt;</button>
         <button type="button" name="right-slide">&gt;</button>
       </section>
       <section>
         <h2>Скидки 50%</h2>
         <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Скидки 50%">
-        <form action="#" method="get">
-          <button>На 350 товаров</button>
-        </form>
+        <a href="#">На 350 товаров</a>
       </section>
       <section>
         <h2>Доставка</h2>
         <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Доставка">
-        <form action="#" method="get">
-          <button>Бесплатно</button>
-        </form>
+        <a href="#">Бесплатно</a>
       </section>
       <section>
         <h2>Популярные товары:</h2>
-        <form action="#" method="get">
-          <button>Все популярные товары</button>
-        </form>
+        <a href="#">Все популярные товары</a>
         <ul>
           <li>
             <a href="catalog-item.html"><img src="img/bosch-9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000"></a>
@@ -113,7 +99,7 @@
               </a>
             </h3>
             <p><del>32500 Р.</del> </p>
-            <button type="button" name="price">25500 Р.</button>
+            <p>25500 Р.</p>
           </li>
           <li>
             <a href="catalog-item.html"><img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
@@ -124,7 +110,7 @@
               </a>
             </h3>
             <p><del>22500 Р.</del> </p>
-            <button type="button" name="price">15500 Р.</button>
+          <p>15500 Р.</p>
           </li>
           <li>
             <a href="catalog-item.html"><img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
@@ -135,7 +121,7 @@
               </a>
             </h3>
             <p><del>30500 Р.</del> </p>
-            <button type="button" name="price">25500 Р.</button>
+            <p>25500 Р.</p>
           </li>
           <li>
             <a href="catalog-item.html"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
@@ -145,15 +131,13 @@
               <span>BFG 2000</span>
               </a>
             </h3>
-            <button type="button" name="price">12500 Р.</button>
+            <p>12500 Р.</p>
           </li>
         </ul>
       </section>
       <section>
         <h2>Популярные производители:</h2>
-        <form action="#" method="get">
-          <button>Все производители</button>
-        </form>
+        <a href="#">Все производители</a>
         <ul>
           <li>
             <a href="https://www.bosch.ru/">
@@ -203,18 +187,31 @@
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         <ul>
           <li>
-            <h3>Доставка</h3>
-              <p>Доставка</p>
+            <button type="button">Доставка</button>
+              <h3>Доставка</h3>
               <p>Мы с удовольствием доставим ваш товар прямо <br>
                 к вашему подъезду совершенно бесплатно! <br>
                 Ведь мы неплохо заработаем, <br>
                 поднимая его на ваш этаж!</p>
           </li>
           <li>
-            <h3>Гарантия</h3>
+              <button type="button">Гарантия</button>
+              <h3>Гарантия</h3>
+              <p>
+                Если купленный у нас товар поломается или заискрит, <br>
+                а также в случае пожара, спровоцированного его возгоранием, <br>
+                вы всегда можете быть уверены в нашей гарантии. Мы обменяем <br>
+                сгоревший товар на новый. <br>
+                Дом уж восстановите как-нибудь сами.
+              </p>
           </li>
           <li>
+            <button type="button">Кредит</button>
             <h3>Кредит</h3>
+            <p>
+              Залезть в долговую яму стало проще! <br>
+              Кредитные консультанты придут вам на помощь.
+            </p>
           </li>
         </ul>
       </section>
