--- a/index.html
+++ b/index.html
@@ -3,44 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i|PT+Sans:400,400i,700,700i&display=swap&subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header>
-      <a href="index.html">
-        <img src="img/logo.svg" width="200" height="47" alt="Логотип интернет-магазина «Техномарт»">
-      </a>
+      <div class="main-bar">
+      <div class="logo-header">
+        <a href="index.html">
+        <img src="img/logo.svg" width="109" height="19" alt="Логотип интернет-магазина «Техномарт»">
+        </a>
+      </div>
       <ul>
         <li>
       <form class="" action="https://echo.htmlacademy.ru" method="get">
         <label for="search" class="visually-hidden">Поиск:</label>
-        <button type="submit"><img src="img/icon-search.svg" alt="Поиск"></button>
         <input id="search" type="search" name="search" value="" placeholder="Поиск:">
       </form>
         </li>
         <li>
-          <a href="#">Закладки: 0</a>
+          <a href="#" class="favorites">Закладки: 0</a>
         </li>
         <li>
-          <a href="#">Корзина: 0</a>
+          <a href="#" class="basket">Корзина: 0</a>
         </li>
-        <li>
-          <a href="#">Оформить заказ</a>
+        <li >
+          <a href="#" class="checkout">Оформить заказ</a>
         </li>
       </ul>
-      <p> Интернет-магазин <br>
+      </div>
+      <p class="title"> Интернет-магазин <br>
         строительных материалов <br>
         и инструментов для ремонта
       </p>
-      <section>
+      <section class="contact-info-header">
         <h2 class="visually-hidden">Контактный телефон:</h2>
         <span>+7 (812) 555-05-55</span>
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
       </section>
-      <ul>
+      <ul class="user-panel">
       <li><button type="button" name="sign-in">Войти</button></li>
       <li><button type="button" name="sign-up">Регистрация</button></li>
       </ul>
-      <nav>
+      <nav class="header-navigation">
         <ul>
           <li><a href="index.html">Главная</a></li>
           <li><a href="#">Компания</a></li>
@@ -215,32 +221,32 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="about-company">
         <h2>Компания "Техномарт"</h2>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
           строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.</p>
         <p>Мы можем доставить ваш товар в самые отдаленные точки России!<br>
           Техномарт работает со многими транспортными компаниями:</p>
         <ul>
-          <li>Деловые линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
+          <li>Деловые линии</li> <br>
+          <li>Автотрейдинг</li> <br>
+          <li>ЖелДорЭкспедиция</li> <br>
         </ul>
         <a href="#">Подробнее о компании</a>
       </section>
-      <section>
+      <section class="contacts">
         <h2>Котакты</h2>
         <p>Вы можете забрать товар сами, <br>
           заехав в наш офис:</p>
-          <img src="img/map.png" width="300" height="158" alt="Карта расположения офиса компании">
+          <img src="img/map.png" width="300" height="158" alt="Карта расположения офиса компании"> <br>
         <button type="button" name="contact-us">Заблудились? Напишите нам!</button>
       </section>
-      <section>
+      <section class="visually-hidden">
         <h2 class="visually-hidden">Как до нас добраться</h2>
         <img src="img/map_popup.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург" width="940" height="446">
         <button type="button">Закрыть</button>
       </section>
-      <section>
+      <section class="visually-hidden">
         <h2 class="visually-hidden">Форма обратной связи</h2>
         <form class="" action="https://echo.htmlacademy.ru" method="post">
             <label for="name">Ваше имя:</label>
@@ -255,10 +261,11 @@
       </section>
     </main>
     <footer>
-      <a href="index.html">
-        <img src="img/logo.svg" width="200" height="47" alt="Логотип интернет-магазина «Техномарт»">
-      </a>
-      <nav>
+      <section class="first-footer">
+        <a href="index.html" class="logo-footer">
+        <img src="img/logo.svg" width="138" height="23" alt="Логотип интернет-магазина «Техномарт»">
+        </a>
+      <nav class="site-navigation">
         <ul>
           <li><a href="#">Компания</a></li>
           <li><a href="#">Новости</a></li>
@@ -267,9 +274,9 @@
           <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
-      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      <p>+7 (812) 555-05-55</p>
-      <nav>
+      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
+      +7 (812) 555-05-55</p>
+      <nav class="catalog-navigation">
         <ul>
           <li><a href="#">Материалы</a></li>
           <li><a href="#">Техника</a></li>
@@ -277,6 +284,8 @@
           <li><a href="#">Спецпредложения</a></li>
         </ul>
       </nav>
+      </section>
+      <section class="second-footer">
       <p>© 2010–2019 Компания «Техномарт» <br>
         Все права защищены</p>
       <div>
@@ -285,9 +294,10 @@
         <a href="#"><img src="img/instagram.svg" alt="Инстаграм"></a>
       </div>
       <p>Обратная связь: <br>
-        mail@htmlacademy.ru</p>
+        <a href="#">mail@htmlacademy.ru</a></p>
       <p>Разработано — <br>
         <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+      </section>
     </footer>
   </body>
 </html>
