Выполнил дополнительное домашнее задание.

--- a/catalog.html
+++ b/catalog.html
@@ -114,16 +114,18 @@
               <input id="network" type="radio" name="power" value="network">
               <label for="network">Сетевые</label>
             </fieldset>
-            <button type="submit">Показать</button>
+            <button type="submit" class="btn-show">Показать</button>
           </form>
       </section>
       <section class="catalog">
-        <h4>Сортировка:</h4>
+        <div class="sorting">
+          <h4>Сортировка:</h4>
           <button type="button">По цене</button>
           <button type="button">По типу</button>
           <button type="button">По функционалу</button>
           <button type="button">По возврастанию</button>
           <button type="button">По убыванию</button>
+        </div>
         <h2 class="visually-hidden">Каталог товаров:</h2>
         <ul>
           <li>
