--- a/index.html
+++ b/index.html
@@ -59,135 +59,144 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section class="elements-catalog-list element-1">
         <h2>Материалы</h2>
-        <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Материалы">
         <a href="#">На любой вкус</a>
+        <!-- <img src="img/materials.svg" alt="Иконка материалов">
+        <img src="img/icon-new.png" alt=""> -->
       </section>
-      <section>
+      <section class="elements-catalog-list element-2">
         <h2>Инструмент</h2>
-        <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Инструмент">
         <a href="#">На все случаи</a>
       </section>
-      <section>
+      <section class="elements-catalog-list element-3">
         <h2>Техника</h2>
-        <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Техника">
         <a href="#">Для стройки</a>
       </section>
-      <section>
-        <h2>Дрели</h2>
-        <p>Соседям на радость</p>
-        <img src="https://via.placeholder.com/620x266" width="620" height="266" alt="Дрели">
-        <a href="catalog.html">Открыть каталог</a>
-        <button type="button" name="left-slide">&lt;</button>
-        <button type="button" name="right-slide">&gt;</button>
+      <section class="element-4">
+        <div class="first-slider">
+          <h2>Перфораторы</h2>
+          <p>Настоящие мужские игрушки</p>
+          <a href="#"><img src="img/left-slider.svg" alt="Кнопка влево"></a>
+          <a href="#"><img src="img/right-slider.svg" alt="Кнопка вправо"></a>
+          <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
+        </div>
+        <div class="second-slider">
+          <h2>Дрели</h2>
+          <p>Соседям на радость!</p>
+          <a href="#"><img src="img/left-slider.svg" alt="Кнопка влево"></a>
+          <a href="#"><img src="img/right-slider.svg" alt="Кнопка вправо"></a>
+          <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
+        </div>
       </section>
-      <section>
+      <section class="elements-catalog-list element-5">
         <h2>Скидки 50%</h2>
-        <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Скидки 50%">
         <a href="#">На 350 товаров</a>
       </section>
-      <section>
+      <section class="elements-catalog-list element-6">
         <h2>Доставка</h2>
-        <img src="https://via.placeholder.com/300x123" width="300" height="123" alt="Доставка">
         <a href="#">Бесплатно</a>
       </section>
-      <section>
-        <h2>Популярные товары:</h2>
-        <a href="#">Все популярные товары</a>
+      <section class="catalog">
+        <div class="section-header">
+          <h2>Популярные товары</h2>
+          <a href="#" class="section-header-btn">Все популярные товары</a>
+        </div>
         <ul>
           <li>
-            <a href="catalog-item.html"><img src="img/bosch-9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000"></a>
+            <a href="#"><img src="img/bosch-9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000"></a>
             <h3>
-              <a href="catalog-item.html">
+              <a href="#">
               <span>Перфоратор BOSCH</span>
               <span>BFG 9000</span>
               </a>
             </h3>
             <p><del>32500 Р.</del> </p>
-            <p>25500 Р.</p>
+            <p class="current-price">25500 Р.</p>
           </li>
           <li>
-            <a href="catalog-item.html"><img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
+            <a href="#"><img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
             <h3>
-              <a href="catalog-item.html">
+              <a href="#">
               <span>Перфоратор BOSCH</span>
               <span>BFG 3000</span>
               </a>
             </h3>
             <p><del>22500 Р.</del> </p>
-          <p>15500 Р.</p>
+            <p class="current-price">15500 Р.</p>
           </li>
           <li>
-            <a href="catalog-item.html"><img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
+            <a href="#"><img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
             <h3>
-              <a href="catalog-item.html">
+              <a href="#">
               <span>Перфоратор BOSCH</span>
               <span>BFG 6000</span>
               </a>
             </h3>
             <p><del>30500 Р.</del> </p>
-            <p>25500 Р.</p>
+            <p class="current-price">25500 Р.</p>
           </li>
           <li>
-            <a href="catalog-item.html"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
+            <a href="#"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
             <h3>
-              <a href="catalog-item.html">
+              <a href="#">
               <span>Перфоратор BOSCH</span>
               <span>BFG 2000</span>
               </a>
             </h3>
-            <p>12500 Р.</p>
+            <p class="current-price">12500 Р.</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Популярные производители:</h2>
-        <a href="#">Все производители</a>
+      <section class="popular-manufaturers">
+        <div class="section-header">
+          <h2>Популярные производители</h2>
+          <a href="#" class="section-header-btn">Все производители</a>
+        </div>
         <ul>
           <li>
             <a href="https://www.bosch.ru/">
-              <img src="img/partner_logo_1.jpg" width="126" height="37" alt="Bosch">
+              <img src="img/partner-logo-1.jpg" alt="Bosch">
             </a>
           </li>
           <li>
             <a href="http://www.makita.ru/">
-              <img src="img/partner_logo_2.jpg" width="123" height="40" alt="Makita">
+              <img src="img/partner-logo-2.jpg" alt="Makita">
             </a>
           </li>
           <li>
             <a href="https://ru.dewalt.global/">
-              <img src="img/partner_logo_3.jpg" width="146" height="44" alt="Dewalt">
+              <img src="img/partner-logo-3.jpg" alt="Dewalt">
             </a>
           </li>
           <li>
             <a href="http://www.interskol.ru/">
-              <img src="img/partner_logo_4.jpg" width="200" height="88" alt="Интерскол">
+              <img src="img/partner-logo-4.jpg" alt="Интерскол">
             </a>
           </li>
           <li>
             <a href="https://www.hitachi.ru/ru">
-              <img src="img/partner_logo_5.jpg" width="169" height="31" alt="Hitachi">
+              <img src="img/partner-logo-5.jpg" alt="Hitachi">
             </a>
           </li>
           <li>
             <a href="https://www.lg.com/ru">
-              <img src="img/partner_logo_6.jpg" width="121" height="73" alt="LG">
+              <img src="img/partner-logo-6.jpg" alt="LG">
             </a>
           </li>
           <li>
             <a href="https://www.aeg.ru/">
-              <img src="img/partner_logo_7.jpg" width="151" height="96" alt="AEG">
+              <img src="img/partner-logo-7.jpg" alt="AEG">
             </a>
           </li>
           <li>
             <a href="https://www.metabo.com/ru/ru/">
-              <img src="img/partner_logo_8.jpg" width="204" height="69" alt="metabo">
+              <img src="img/partner-logo-8.jpg" alt="metabo">
             </a>
           </li>
         </ul>
       </section>
-      <section>
+      <section class="services">
         <h2>Сервисы</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами! <br>
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
@@ -195,14 +204,17 @@
           <li>
             <button type="button">Доставка</button>
               <h3>Доставка</h3>
-              <p>Мы с удовольствием доставим ваш товар прямо <br>
+              <p>
+                Мы с удовольствием доставим ваш товар прямо <br>
                 к вашему подъезду совершенно бесплатно! <br>
                 Ведь мы неплохо заработаем, <br>
-                поднимая его на ваш этаж!</p>
+                поднимая его на ваш этаж!
+              </p>
+              <img src="img/delivery.png" alt="">
           </li>
           <li>
               <button type="button">Гарантия</button>
-              <h3>Гарантия</h3>
+              <h3 class="guarantee">Гарантия</h3>
               <p>
                 Если купленный у нас товар поломается или заискрит, <br>
                 а также в случае пожара, спровоцированного его возгоранием, <br>
@@ -210,6 +222,7 @@
                 сгоревший товар на новый. <br>
                 Дом уж восстановите как-нибудь сами.
               </p>
+              <img src="img/guarantee.png" alt="">
           </li>
           <li>
             <button type="button">Кредит</button>
@@ -218,6 +231,7 @@
               Залезть в долговую яму стало проще! <br>
               Кредитные консультанты придут вам на помощь.
             </p>
+            <img src="img/credit.png" alt="">
           </li>
         </ul>
       </section>
@@ -243,7 +257,7 @@
       </section>
       <section class="visually-hidden">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <img src="img/map_popup.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург" width="940" height="446">
+        <img src="img/map-popup.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург" width="940" height="446">
         <button type="button">Закрыть</button>
       </section>
       <section class="visually-hidden">
