--- a/index.html
+++ b/index.html
@@ -9,56 +9,61 @@
   </head>
   <body>
     <header>
-      <div class="main-bar">
-      <div class="logo-header">
-        <a href="index.html">
-        <img src="img/logo.svg" width="109" height="19" alt="Логотип интернет-магазина «Техномарт»">
-        </a>
+      <div class="darkblue-background">
+        <div class="main-bar container">
+          <div class="logo-header">
+            <a href="index.html">
+            <img src="img/logo.svg" width="109" height="19" alt="Логотип интернет-магазина «Техномарт»">
+            </a>
+          </div>
+          <ul>
+            <li>
+          <form class="" action="https://echo.htmlacademy.ru" method="get">
+            <label for="search" class="visually-hidden">Поиск:</label>
+            <input id="search" type="search" name="search" value="" placeholder="Поиск:">
+          </form>
+            </li>
+            <li>
+              <a href="#" class="favorites">Закладки: 0</a>
+            </li>
+            <li>
+              <a href="#" class="basket">Корзина: 0</a>
+            </li>
+            <li >
+              <a href="#" class="checkout">Оформить заказ</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <ul>
-        <li>
-      <form class="" action="https://echo.htmlacademy.ru" method="get">
-        <label for="search" class="visually-hidden">Поиск:</label>
-        <input id="search" type="search" name="search" value="" placeholder="Поиск:">
-      </form>
-        </li>
-        <li>
-          <a href="#" class="favorites">Закладки: 0</a>
-        </li>
-        <li>
-          <a href="#" class="basket">Корзина: 0</a>
-        </li>
-        <li >
-          <a href="#" class="checkout">Оформить заказ</a>
-        </li>
-      </ul>
-      </div>
-      <p class="title"> Интернет-магазин <br>
-        строительных материалов <br>
-        и инструментов для ремонта
-      </p>
-      <section class="contact-info-header">
-        <h2 class="visually-hidden">Контактный телефон:</h2>
-        <span>+7 (812) 555-05-55</span>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      </section>
-      <ul class="user-panel">
-      <li><button type="button" name="sign-in">Войти</button></li>
-      <li><button type="button" name="sign-up">Регистрация</button></li>
-      </ul>
-      <nav class="header-navigation">
-        <ul>
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="#">Компания</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Новости</a></li>
-          <li><a href="#">Спецпредложения</a></li>
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Контакты</a></li>
+      <div class="container header-panel">
+        <p class="title"> Интернет-магазин <br>
+          строительных материалов <br>
+          и инструментов для ремонта
+        </p>
+        <section class="contact-info-header">
+          <h2 class="visually-hidden">Контактный телефон:</h2>
+          <span>+7 (812) 555-05-55</span>
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </section>
+        <ul class="user-panel">
+        <li><button type="button" name="sign-in">Войти</button></li>
+        <li><button type="button" name="sign-up">Регистрация</button></li>
         </ul>
-      </nav>
+        <nav class="header-navigation container">
+          <ul>
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="#">Компания</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Спецпредложения</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
+    <div class="container elements-catalog-1">
       <section class="elements-catalog-list element-1">
         <h2>Материалы</h2>
         <a href="#">На любой вкус</a>
@@ -74,13 +79,13 @@
         <a href="#">Для стройки</a>
       </section>
       <section class="element-4">
-        <div class="first-slider">
+        <!-- <div class="first-slider">
           <h2>Перфораторы</h2>
           <p>Настоящие мужские игрушки</p>
           <a href="#"><img src="img/left-slider.svg" alt="Кнопка влево"></a>
           <a href="#"><img src="img/right-slider.svg" alt="Кнопка вправо"></a>
           <a href="catalog.html" class="catalog-btn">Открыть каталог</a>
-        </div>
+        </div> -->
         <div class="second-slider">
           <h2>Дрели</h2>
           <p>Соседям на радость!</p>
@@ -97,7 +102,8 @@
         <h2>Доставка</h2>
         <a href="#">Бесплатно</a>
       </section>
-      <section class="catalog">
+    </div>
+      <section class="container catalog">
         <div class="section-header">
           <h2>Популярные товары</h2>
           <a href="#" class="section-header-btn">Все популярные товары</a>
@@ -107,7 +113,7 @@
             <a href="#"><img src="img/bosch-9000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 9000"></a>
             <h3>
               <a href="#">
-              <span>Перфоратор BOSCH</span>
+              <span>Перфоратор BOSCH</span><br>
               <span>BFG 9000</span>
               </a>
             </h3>
@@ -118,7 +124,7 @@
             <a href="#"><img src="img/bosch-3000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 3000"></a>
             <h3>
               <a href="#">
-              <span>Перфоратор BOSCH</span>
+              <span>Перфоратор BOSCH</span><br>
               <span>BFG 3000</span>
               </a>
             </h3>
@@ -129,7 +135,7 @@
             <a href="#"><img src="img/bosch-6000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 6000"></a>
             <h3>
               <a href="#">
-              <span>Перфоратор BOSCH</span>
+              <span>Перфоратор BOSCH</span><br>
               <span>BFG 6000</span>
               </a>
             </h3>
@@ -140,15 +146,16 @@
             <a href="#"><img src="img/bosch-2000.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000"></a>
             <h3>
               <a href="#">
-              <span>Перфоратор BOSCH</span>
+              <span>Перфоратор BOSCH</span><br>
               <span>BFG 2000</span>
               </a>
             </h3>
+            <p><del><br></del></p>
             <p class="current-price">12500 Р.</p>
           </li>
         </ul>
       </section>
-      <section class="popular-manufaturers">
+      <section class="container popular-manufaturers">
         <div class="section-header">
           <h2>Популярные производители</h2>
           <a href="#" class="section-header-btn">Все производители</a>
@@ -196,7 +203,7 @@
           </li>
         </ul>
       </section>
-      <section class="services">
+      <section class="container services">
         <h2>Сервисы</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами! <br>
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
@@ -212,7 +219,7 @@
               </p>
               <img src="img/delivery.png" alt="">
           </li>
-          <li>
+          <!-- <li>
               <button type="button">Гарантия</button>
               <h3 class="guarantee">Гарантия</h3>
               <p>
@@ -232,9 +239,10 @@
               Кредитные консультанты придут вам на помощь.
             </p>
             <img src="img/credit.png" alt="">
-          </li>
+          </li> -->
         </ul>
       </section>
+      <div class="container info">
       <section class="about-company">
         <h2>Компания "Техномарт"</h2>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
@@ -249,12 +257,13 @@
         <a href="#">Подробнее о компании</a>
       </section>
       <section class="contacts">
-        <h2>Котакты</h2>
+        <h2>Контакты</h2>
         <p>Вы можете забрать товар сами, <br>
           заехав в наш офис:</p>
           <img src="img/map.png" width="300" height="158" alt="Карта расположения офиса компании"> <br>
         <button type="button" name="contact-us">Заблудились? Напишите нам!</button>
       </section>
+      </div>
       <section class="visually-hidden">
         <h2 class="visually-hidden">Как до нас добраться</h2>
         <img src="img/map-popup.png" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург" width="940" height="446">
